--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -46,6 +46,7 @@
 <!ENTITY Ctr_closetab_2		"Tab Close: nowhere">
 <!ENTITY Ctr_closetab_3		"Tab Close: on tab toolbars end">
 <!ENTITY Ctr_closetab_4		"Tab Close: on tab toolbars start">
+<!ENTITY Ctr_closetab_5		"Tab Close: on all tabs (forced)">
 
 <!ENTITY Ctr_appbutton		"Botón de la aplicación">
 <!ENTITY Ctr_appbutton0		"Botón deshabilitado">
@@ -53,6 +54,7 @@
 <!ENTITY Ctr_appbutton1wt	"Botón en la barra de herramientas (text only)">
 <!ENTITY Ctr_appbutton2		"Botón en la barra de título">
 <!ENTITY Ctr_appbutton2io	"Botón en la barra de título (icon only)">
+<!ENTITY Ctr_paneluibtweak	"Orange panel menu button on tabs toolbar">
 <!ENTITY Ctr_appbuttonc_o	"Color de botón naranja (por defecto)">
 <!ENTITY Ctr_appbuttonc_a	"Color de botón azul (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Color de botón negro (Nightly)">
@@ -94,6 +96,8 @@
 <!ENTITY Ctr_nav_txt_ico1	"Mostrar iconos grandes">
 <!ENTITY Ctr_nav_txt_ico2	"Mostrar iconos y texto">
 <!ENTITY Ctr_nav_txt_ico3	"Mostrar sólo texto">
+<!ENTITY Ctr_stoprel0		"Reload and stop button settings">
+<!ENTITY Ctr_stoprel1		"Toolbar: place reload button after stop button!">
 
 <!ENTITY Ctr_tab_tf_info	"Las entradas soportan nombres de colores, códigos hexadecimales, rgb(a) y hsl(a) valores. Las entradas no serán validados!">
 <!ENTITY Ctr_tabacthovdef	"Pestaña (activa/subyacente/por defecto)">
@@ -137,8 +141,8 @@
 
 <!ENTITY Ctr_specialtw		"Ajustes especiales">
 <!ENTITY Ctr_emptyfavicon	"Restaurar favicon vacío en las pestañas">
+<!ENTITY Ctr_emptyfavicon2	"Replace generic favicon (empty and dotted) with sheet favicon">
 <!ENTITY Ctr_bfurlbarfix 	"Corregir la frontera de radio de la barra de URL: 2px (Win) / 2.5px (Mac)">
-<!ENTITY Ctr_showtabclose	"Mostrar siempre el botón-pestaña de cierre (reiniciar Firefox!)">
 <!ENTITY Ctr_cpanelmenus	"Menús del panel compacto (marcadores, historial, etc)">
 <!ENTITY Ctr_hidezoomres	"Zoom controls on toolbar: hide zoom-reset button">
 <!ENTITY Ctr_pmhidelabels	"Panel menu: hide button labels">
@@ -150,13 +154,13 @@
 <!ENTITY Ctr_tabmokcolor2	"Color blanco para texto de pestañas">
 <!ENTITY Ctr_tabmokcolor3	"Color blanco para separadores de la barra de pestañas">
 
-<!ENTITY Ctr_paneluibtweak	"Apariencia del botón de la aplicación para el botón del panel UI (en la barra de pestañas)">
 <!ENTITY Ctr_dblclnewtab	"Barra de pestañas: doble clic en Abrir una nueva pestaña">
 <!ENTITY Ctr_hidetbwot		"Barra de pestañas: hide tabs toolbar with one tab (restart Firefox!)">
 <!ENTITY Ctr_faviconurl		"Favicon in urlbar (restart Firefox!)">
+<!ENTITY Ctr_faviconurl2	"Padlock">
 <!ENTITY Ctr_dblclclosefx	"Botón de la aplicación en la barra de título: doble click cierra ventana actual">
 <!ENTITY Ctr_hide_bf_popup	"Movable back/forward button: hide history menu on mouse press">
-<!ENTITY Ctr_verifiedcolors	"Alternative identity-box colors for verified websites">
+<!ENTITY Ctr_verifiedcolors	"Green/blue identity-box for verified websites">
 
 <!ENTITY Ctr_animation		"Animación">
 <!ENTITY Ctr_throbberalt	"Animación de carga alternativo para tabuladores throbber">
@@ -168,8 +172,14 @@
 <!ENTITY Ctr_closeabarbut	"Ocultar botón cerrar de la barra de complementos">
 <!ENTITY Ctr_toolsitem		"Elemento en el menú de herramientas">
 <!ENTITY Ctr_appmenuitem	"Elemento en el menú de la aplicación">
+<!ENTITY Ctr_contextitem	"Menuitem in toolbars context menu">
 <!ENTITY Ctr_cuibotbuttons	"Los botones de opción en el modo de 'personalizar ui'">
 
+<!ENTITY Ctr_pw_settings	"Settings">
+<!ENTITY Ctr_pw_set_reset	"Restore defaults">
+<!ENTITY Ctr_pw_set_predef	"Classic preset">
+<!ENTITY Ctr_pw_set_export	"Export preferences">
+<!ENTITY Ctr_pw_set_import	"Import preferences">
 
 <!ENTITY Ctr_special_font	"Background color settings are for default theme only!">
 <!ENTITY Ctr_special_info	"Some options only offer visual changes in certain cases!">
